# team-velocity

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run_tests.sh  storybot.db
bot/: main.py
core/: export.py  models.py  services.py
db/: database.py
tests/: .env.test  conftest.py  test_bot.py  test_models.py  test_services.py
